7126979: (props) JCK test java_lang/System/GetProperties.java failing [macosx] Reviewed-by: skovatch